<resources>
    <string name="app_name">InClass07</string>
    <string name="avatar"> My Avatar</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="s_id">Student ID (Please enter 9 digit ID)</string>
    <string name="cs">CS</string>
    <string name="sis">SIS</string>
    <string name="bio">BIO</string>
    <string name="other">Other</string>
    <string name="department">Department :</string>
    <string name="save">Save</string>
    <string name="name">Name: </string>
    <string name="s_id2">Student ID:</string>
    <string name="edit">Edit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
